Fix bug where help_text covers controls for stream-field

--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/layouts/page-editor.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/layouts/page-editor.scss
@@ -408,9 +408,12 @@ footer .preview {
         }
 
         &.stream-field {
-            &:hover .object-help,
             .object-help {
                 opacity: 0;
+                position: relative;
+            }
+            &:hover .object-help {
+                opacity: 1;
             }
         }
 
